8287396: LIR_Opr::vreg_number() and data() can return negative number

Reviewed-by: stuefe
Backport-of: cdb476888a65b8ee2538f08b4b1dbb245874a262